--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta property="og:title" content="Linu Uprasi | Developer Portfolio">
+<meta property="og:description" content="A clean, responsive, and performance-focused developer portfolio built with HTML, CSS, and JavaScript.">
+<meta property="og:image" content="https://linu60.github.io/LINU-PORTFOLIO/preview.png">
+<meta property="og:url" content="https://linu60.github.io/LINU-PORTFOLIO/">
+
   <title>Linu Uprasi - Portfolio</title>
 
   <!-- Tailwind CSS CDN -->
